force-app/main/default/objects/Google_App__c/Google_App__c.object-meta.xml
<CustomObject>
    <label>Google App</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GoogleApp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>