force-app/main/default/objects/Google_App__c/fields/clientID__c.field-meta.xml
<CustomField>
    <fullName>clientID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Also know as the Application ID</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>