force-app/main/default/objects/Google_App__c/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Also known as Application Secret</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>