force-app/main/default/objects/Google_App__c/fields/expiresIn__c.field-meta.xml
<CustomField>
    <fullName>expiresIn__c</fullName>
    <description>The remaining lifetime on the access token (in seconds)</description>
    <inlineHelpText>The remaining lifetime on the access token (in seconds)</inlineHelpText>
    <label>Expires In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>