force-app/main/default/objects/Google_App__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope of API access, e.g. &quot;https://www.googleapis.com/auth/calendar&quot; provides read-write access to Calendars, Calendar Events and Calendar ACLs</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scope of API access, e.g. &quot;https://www.googleapis.com/auth/calendar&quot; provides read-write access to Calendars, Calendar Events and Calendar ACLs</inlineHelpText>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>